--- a/src/components/MovieList/style.scss
+++ b/src/components/MovieList/style.scss
@@ -1,14 +1,13 @@
-h3 {
-  margin: 40px 0 0;
-}
-ul {
-  list-style-type: none;
-  padding: 0;
-}
-li {
-  display: inline-block;
-  margin: 0 10px;
-}
-a {
-  color: #42b983;
+.movie-list {
+  display: flex;
+  flex-flow: row  wrap;
+  align-items: flex-start;
+  justify-content: space-around;
+
+  &__message {
+    font-size: 2.5em;
+    color: #7488ab;
+    opacity: .3;
+    margin-bottom: 30px;
+  }
 }
